# web-search-mcp

./: .dockerignore  .env.example  .gitignore  AI_AWARENESS_CHANGES.md  AI_USAGE_GUIDE.md  BUG_FIX_REPORT.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/schemas/: search.py
app/services/: cache.py  google.py
