[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-web-search-server"
version = "0.1.0"
description = "FastAPI MCP server for Google web search with comprehensive search capabilities"
authors = [{name = "PhoneMinThu", email = "user@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "fastapi-mcp>=0.1.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
mcp-web-search = "app.main:main"
